--- a/src/app/src/main/res/layout/login_activity.xml
+++ b/src/app/src/main/res/layout/login_activity.xml
@@ -6,24 +6,12 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/txtErrorNombreLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:elevation="10dp"
-        android:fontFamily="@font/roboto_medium"
-        android:text="Nombre de usuario incorrecto"
-        android:textColor="#7C0606"
-        app:layout_constraintEnd_toEndOf="@+id/nombreUsuarioLogin"
-        app:layout_constraintStart_toStartOf="@+id/nombreUsuarioLogin"
-        app:layout_constraintTop_toBottomOf="@+id/nombreUsuarioLogin" />
-
-    <TextView
         android:id="@+id/txtErrorContrasenyaLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="10dp"
         android:fontFamily="@font/roboto_medium"
-        android:text="Contraseña incorrecta"
+        android:text="Datos incorrectos"
         android:textColor="#7C0606"
         app:layout_constraintEnd_toEndOf="@+id/ContrasenyaUsuarioLogin"
         app:layout_constraintStart_toStartOf="@+id/ContrasenyaUsuarioLogin"
@@ -41,7 +29,7 @@
         app:layout_constraintStart_toStartOf="@+id/confirmarContrasenyaUsuarioLogin"
         app:layout_constraintTop_toBottomOf="@+id/confirmarContrasenyaUsuarioLogin" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/imageButton9"
         android:layout_width="25dp"
         android:layout_height="25dp"
@@ -50,7 +38,7 @@
         app:layout_constraintStart_toEndOf="@+id/imageButton10"
         app:layout_constraintTop_toBottomOf="@+id/imageButton10" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/imageButton15"
         android:layout_width="25dp"
         android:layout_height="25dp"
@@ -60,7 +48,7 @@
         app:layout_constraintBottom_toTopOf="@+id/imageButton12"
         app:layout_constraintEnd_toStartOf="@+id/imageButton13" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/imageButton11"
         android:layout_width="25dp"
         android:layout_height="25dp"
@@ -70,7 +58,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/imageButton10"
         android:layout_width="75dp"
         android:layout_height="75dp"
@@ -80,7 +68,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/imageButton12"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -90,7 +78,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/imageButton13"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -100,7 +88,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/imageButton14"
         android:layout_width="50dp"
         android:layout_height="50dp"
