--- a/src/app/src/main/res/layout/perfil_usuario_activity.xml
+++ b/src/app/src/main/res/layout/perfil_usuario_activity.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/o"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorFondo">
@@ -198,6 +199,7 @@
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="32dp"
         android:background="@drawable/boton_secundario"
+        android:onClick="botonCerrarSesion"
         android:text="Cerrar sesión"
         android:textColor="@color/colorBotones"
         app:layout_constraintBottom_toBottomOf="parent"
