Login, Cerrar sesión, Editar Usuario, Perfil - FUNCIONALES

--- a/src/app/src/main/res/layout/perfil_usuario_editar_activity.xml
+++ b/src/app/src/main/res/layout/perfil_usuario_editar_activity.xml
@@ -102,7 +102,7 @@
         android:layout_height="40dp"
         android:layout_marginBottom="88dp"
         android:background="@drawable/botones"
-        android:onClick="botonEditarPerfilPerfil"
+        android:onClick="botonGuardar"
         android:text="Guardar"
         android:textColor="@color/colorFondo"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -120,7 +120,7 @@
         android:background="@drawable/textbox"
         android:ems="10"
         android:hint="Marta"
-        android:inputType="textPassword"
+        android:inputType="text"
         android:textAlignment="center"
         android:textColorHint="@color/colortxt"
         app:layout_constraintBottom_toTopOf="@+id/txtNombreLogin2"
@@ -151,7 +151,7 @@
         android:background="@drawable/textbox"
         android:ems="10"
         android:hint="marta@gmail.com"
-        android:inputType="textPersonName"
+        android:inputType="textEmailAddress"
         android:paddingLeft="10dp"
         android:text=""
         android:textAlignment="center"
@@ -242,7 +242,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="24dp"
-        android:onClick="botonEditarPerfilPerfil"
+        android:onClick="botonVolverAtras"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/icono_flecha" />
