Versión Final (faltan comentarios)

--- a/src/app/src/main/res/layout/home_activity.xml
+++ b/src/app/src/main/res/layout/home_activity.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageButton
+    <ImageView
         android:id="@+id/circuloHome"
         android:layout_width="75dp"
         android:layout_height="75dp"
@@ -15,7 +15,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/circuloHome2"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -25,16 +25,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/circuloHome" />
 
-    <ImageButton
-        android:id="@+id/circuloHome3"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="16dp"
-        android:background="@drawable/circulo3"
-        app:layout_constraintBottom_toTopOf="@+id/circuloHome2"
-        app:layout_constraintStart_toEndOf="@+id/circuloHome" />
-
-    <ImageButton
+    <ImageView
         android:id="@+id/circuloHome4"
         android:layout_width="20dp"
         android:layout_height="20dp"
@@ -43,7 +34,7 @@
         app:layout_constraintBottom_toTopOf="@+id/circuloHome5"
         app:layout_constraintStart_toEndOf="@+id/circuloHome5" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/circuloHome5"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -53,17 +44,19 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/circuloHome6"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="-24dp"
+        android:layout_marginTop="-16dp"
+        android:layout_marginEnd="32dp"
         android:background="@drawable/circulo2"
         app:layout_constraintEnd_toStartOf="@+id/imageButton8"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageButton8" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/circuloHome9"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -73,7 +66,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/imageButton6"
         app:layout_constraintStart_toStartOf="@+id/imageButton6" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/circuloHome10"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -83,37 +76,38 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageButton6" />
 
-    <ImageButton
+    <ImageView
+        android:id="@+id/circuloHome18"
+        android:layout_width="250dp"
+        android:layout_height="3dp"
+        android:background="@drawable/circulo1"
+        android:elevation="11dp"
+        app:layout_constraintBottom_toTopOf="@+id/textView17"
+        app:layout_constraintEnd_toEndOf="@+id/imageButton6"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/imageButton6"
+        app:layout_constraintTop_toBottomOf="@+id/txtEstadoAireLanding" />
+
+    <ImageView
         android:id="@+id/circuloHome11"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/circulo3"
         app:layout_constraintEnd_toStartOf="@+id/imageView6"
-        app:layout_constraintTop_toBottomOf="@+id/circuloHome12" />
+        app:layout_constraintTop_toBottomOf="@+id/circuloHome6" />
 
-    <ImageButton
-        android:id="@+id/circuloHome12"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="-16dp"
-        android:layout_marginTop="-16dp"
-        android:background="@drawable/circulo1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageButton
+    <ImageView
         android:id="@+id/circuloHome13"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/circulo2"
-        app:layout_constraintStart_toEndOf="@+id/circuloHome12"
+        app:layout_constraintStart_toEndOf="@+id/circuloHome6"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/circuloHome14"
         android:layout_width="60dp"
         android:layout_height="60dp"
@@ -125,27 +119,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
-        android:id="@+id/circuloHome15"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="-16dp"
-        android:layout_marginEnd="-16dp"
-        android:background="@drawable/circulo3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageButton
+    <ImageView
         android:id="@+id/circuloHome16"
         android:layout_width="10dp"
         android:layout_height="10dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:background="@drawable/circulo1"
-        app:layout_constraintEnd_toStartOf="@+id/circuloHome15"
+        app:layout_constraintEnd_toStartOf="@+id/circuloHome7"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/circuloHome17"
         android:layout_width="20dp"
         android:layout_height="20dp"
@@ -153,9 +137,9 @@
         android:layout_marginEnd="16dp"
         android:background="@drawable/circulo2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/circuloHome15" />
+        app:layout_constraintTop_toBottomOf="@+id/circuloHome7" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/circuloHome7"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -164,16 +148,6 @@
         android:background="@drawable/circulo1"
         app:layout_constraintBottom_toTopOf="@+id/imageButton8"
         app:layout_constraintEnd_toEndOf="parent" />
-
-    <ImageButton
-        android:id="@+id/circuloHome8"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginEnd="24dp"
-        android:background="@drawable/circulo3"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton8"
-        app:layout_constraintEnd_toStartOf="@+id/circuloHome7"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton6" />
 
     <Button
         android:id="@+id/button6"
@@ -184,10 +158,10 @@
         android:text="Ver todos los datos"
         android:textColor="@color/colorFondo"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton8"
+        app:layout_constraintEnd_toEndOf="@+id/frameLayout"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/imageButton8"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton8" />
+        app:layout_constraintStart_toStartOf="@+id/frameLayout"
+         />
 
     <ImageView
         android:id="@+id/imageView6"
@@ -215,35 +189,44 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
 
-    <ImageButton
+
+    <ImageView
         android:id="@+id/imageButton6"
         android:layout_width="0dp"
-        android:layout_height="275dp"
+        android:layout_height="500dp"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
-        android:layout_marginBottom="24dp"
-        android:background="@drawable/rectangulos"
-        android:elevation="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtNombreLanding" />
-
-    <ImageButton
-        android:id="@+id/imageButton8"
-        android:layout_width="0dp"
-        android:layout_height="175dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginBottom="32dp"
         android:background="@drawable/rectangulos"
         android:elevation="10dp"
         app:layout_constraintBottom_toTopOf="@+id/button6"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="0dp"
+        android:layout_height="175dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
+        android:elevation="10dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageButton6"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton6" />
+        app:layout_constraintTop_toBottomOf="@+id/textView17">
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/chart"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp" />
+
+    </FrameLayout>
 
     <TextView
         android:id="@+id/txtNombreLanding"
@@ -263,13 +246,14 @@
         android:id="@+id/textView15"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
         android:elevation="11dp"
         android:fontFamily="@font/roboto_medium"
         android:text="¿Cómo has respirado hoy?"
         android:textColor="@color/colortxt"
         android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/progressBar"
         app:layout_constraintEnd_toEndOf="@+id/imageButton6"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/imageButton6"
         app:layout_constraintTop_toTopOf="@+id/imageButton6" />
 
@@ -277,15 +261,16 @@
         android:id="@+id/txtEstadoAireLanding"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="24dp"
         android:elevation="11dp"
         android:fontFamily="@font/roboto_medium"
         android:text="Bastante bien"
         android:textColor="@color/colortxt"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageButton6"
+        app:layout_constraintBottom_toTopOf="@+id/circuloHome18"
         app:layout_constraintEnd_toEndOf="@+id/imageButton6"
-        app:layout_constraintStart_toStartOf="@+id/imageButton6" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/imageButton6"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
 
     <TextView
         android:id="@+id/txtPpmLanding"
@@ -301,20 +286,6 @@
         app:layout_constraintStart_toStartOf="@+id/progressBar"
         app:layout_constraintTop_toTopOf="@+id/progressBar" />
 
-    <TextView
-        android:id="@+id/textView17"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:elevation="11dp"
-        android:fontFamily="@font/roboto_medium"
-        android:text="Datos a lo largo del dia (ppm/h)"
-        android:textColor="@color/colortxt"
-        android:textSize="16sp"
-        app:layout_constraintEnd_toEndOf="@+id/imageButton8"
-        app:layout_constraintStart_toStartOf="@+id/imageButton8"
-        app:layout_constraintTop_toTopOf="@+id/imageButton8" />
-
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
@@ -324,6 +295,23 @@
         android:progressDrawable="@drawable/progress_bar"
         app:layout_constraintBottom_toTopOf="@+id/txtEstadoAireLanding"
         app:layout_constraintEnd_toEndOf="@+id/imageButton6"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/imageButton6"
         app:layout_constraintTop_toBottomOf="@+id/textView15" />
+
+    <TextView
+        android:id="@+id/textView17"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="11dp"
+        android:fontFamily="@font/roboto_medium"
+        android:text="Datos a lo largo del dia (ppm/h)"
+
+        android:textColor="@color/colortxt"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
+        app:layout_constraintEnd_toEndOf="@+id/imageButton6"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/imageButton6"
+        app:layout_constraintTop_toBottomOf="@+id/circuloHome18" />
 </androidx.constraintlayout.widget.ConstraintLayout>
