--- a/src/app/src/main/res/layout/login_activity.xml
+++ b/src/app/src/main/res/layout/login_activity.xml
@@ -266,4 +266,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/probetalogo" />
 
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="-40dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/cleanairlylogo" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
