--- a/src/app/src/main/res/layout/perfil_usuario_editar_activity.xml
+++ b/src/app/src/main/res/layout/perfil_usuario_editar_activity.xml
@@ -6,7 +6,7 @@
     android:background="@color/colorFondo"
     android:layout_height="match_parent">
 
-    <ImageButton
+    <ImageView
         android:id="@+id/circuloPerfilEditar8"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -16,7 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/emailEditarPerfil" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/circuloPerfilEditar9"
         android:layout_width="60dp"
         android:layout_height="60dp"
@@ -27,7 +27,7 @@
         app:layout_constraintEnd_toEndOf="@+id/emailEditarPerfil"
         app:layout_constraintTop_toTopOf="@+id/emailEditarPerfil" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/circuloPerfilEditar"
         android:layout_width="75dp"
         android:layout_height="75dp"
@@ -37,7 +37,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/circuloPerfilEditar2"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -47,7 +47,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/circuloPerfilEditar" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/circuloPerfilEditar4"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -57,7 +57,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/circuloPerfilEditar5"
         android:layout_width="75dp"
         android:layout_height="75dp"
@@ -67,7 +67,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/circuloPerfilEditar4" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/circuloPerfilEditar6"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -77,7 +77,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView12" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/circuloPerfilEditar7"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -86,7 +86,7 @@
         app:layout_constraintStart_toStartOf="@+id/emailEditarPerfil"
         app:layout_constraintTop_toBottomOf="@+id/txtNombreLogin2" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/circuloPerfilEditar3"
         android:layout_width="20dp"
         android:layout_height="20dp"
@@ -141,16 +141,17 @@
         app:layout_constraintTop_toBottomOf="@+id/imageButton2"
         app:layout_constraintVertical_chainStyle="packed" />
 
-    <EditText
+    <ImageView
         android:id="@+id/emailEditarPerfil"
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/textbox"
+        android:background="@drawable/rectangulos"
+        android:clickable="false"
+        android:elevation="10dp"
         android:ems="10"
-        android:hint="marta@gmail.com"
         android:inputType="textEmailAddress"
         android:paddingLeft="10dp"
         android:text=""
@@ -204,7 +205,7 @@
         app:layout_constraintStart_toStartOf="@+id/telefonoEditarPerfil"
         app:layout_constraintTop_toBottomOf="@+id/emailEditarPerfil" />
 
-    <ImageButton
+    <ImageView
         android:id="@+id/imageButton2"
         android:layout_width="500dp"
         android:layout_height="250dp"
@@ -283,4 +284,18 @@
         app:layout_constraintEnd_toEndOf="@+id/nombreEditarPerfil"
         app:layout_constraintStart_toStartOf="@+id/nombreEditarPerfil"
         app:layout_constraintTop_toBottomOf="@+id/nombreEditarPerfil" />
+
+    <TextView
+        android:id="@+id/tvEmailEditarPerfil"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:elevation="11dp"
+        android:fontFamily="@font/roboto_medium"
+        android:text="email"
+        android:textColor="@color/colortxt"
+        android:textSize="18sp"
+        app:layout_constraintBottom_toTopOf="@+id/txtErrorEmailEditarPerfil"
+        app:layout_constraintEnd_toEndOf="@+id/emailEditarPerfil"
+        app:layout_constraintStart_toStartOf="@+id/emailEditarPerfil"
+        app:layout_constraintTop_toTopOf="@+id/emailEditarPerfil" />
 </androidx.constraintlayout.widget.ConstraintLayout>
