--- a/src/app/src/main/res/layout/perfil_usuario_activity.xml
+++ b/src/app/src/main/res/layout/perfil_usuario_activity.xml
@@ -18,6 +18,26 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
+        android:id="@+id/circuloPerfil12"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="-32dp"
+        android:background="@drawable/circulo1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/circuloPerfil14"
+        android:layout_width="75dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="-50dp"
+        android:layout_marginTop="40dp"
+        android:background="@drawable/circulo1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
         android:id="@+id/circuloPerfil6"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -26,6 +46,16 @@
         android:background="@drawable/circulo2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageButton5" />
+
+    <ImageView
+        android:id="@+id/circuloPerfil10"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="-24dp"
+        android:layout_marginEnd="-16dp"
+        android:background="@drawable/circulo2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/circuloPerfil8"
@@ -46,6 +76,16 @@
         android:background="@drawable/circulo3"
         app:layout_constraintBottom_toTopOf="@+id/imageButton5"
         app:layout_constraintEnd_toEndOf="@+id/imageButton4" />
+
+    <ImageView
+        android:id="@+id/circuloPerfil11"
+        android:layout_width="9dp"
+        android:layout_height="9dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="32dp"
+        android:background="@drawable/circulo3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/circuloPerfil10" />
 
     <ImageView
         android:id="@+id/circuloPerfil7"
@@ -86,22 +126,21 @@
         app:layout_constraintStart_toEndOf="@+id/circuloPerfil" />
 
     <ImageView
+        android:id="@+id/circuloPerfil13"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="64dp"
+        android:background="@drawable/circulo3"
+        app:layout_constraintStart_toStartOf="@+id/circuloPerfil12"
+        app:layout_constraintTop_toBottomOf="@+id/circuloPerfil12" />
+
+    <ImageView
         android:id="@+id/circuloPerfil4"
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:background="@drawable/circulo2"
         app:layout_constraintBottom_toTopOf="@+id/circuloPerfil5"
         app:layout_constraintStart_toEndOf="@+id/circuloPerfil5" />
-
-    <ImageView
-        android:id="@+id/imageButton3"
-        android:layout_width="500dp"
-        android:layout_height="250dp"
-        android:background="@drawable/circulo_cabecera"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.572"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageButton"
@@ -152,15 +191,16 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginTop="128dp"
         android:fontFamily="@font/roboto_medium"
         android:text="Tu perfil"
-        android:textColor="@color/colorFondo"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
+        android:textColor="@color/colortxt"
+        android:textSize="25sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txtRestablecerPerfil"
@@ -197,7 +237,7 @@
         android:layout_height="40dp"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="132dp"
         android:background="@drawable/boton_secundario"
         android:onClick="botonCerrarSesion"
         android:text="Cerrar sesión"
@@ -217,7 +257,7 @@
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/imageButton"
         app:layout_constraintStart_toStartOf="@+id/imageButton"
-        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
+        app:layout_constraintTop_toBottomOf="@+id/textView5"
         app:layout_constraintVertical_chainStyle="packed" />
 
     <TextView
@@ -245,15 +285,6 @@
         app:layout_constraintTop_toBottomOf="@+id/imageButton4" />
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        app:layout_constraintBottom_toTopOf="@+id/textView5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/icono_usuario" />
-
-    <ImageView
         android:id="@+id/imageView3"
         android:layout_width="50dp"
         android:layout_height="50dp"
@@ -262,7 +293,7 @@
         android:onClick="botonPerfilLanding"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/icono_flecha" />
+        app:srcCompat="@drawable/icono_flecha_azul" />
 
     <TextView
         android:id="@+id/txtNombrePerfil"
