--- a/src/app/src/main/res/layout/login_activity.xml
+++ b/src/app/src/main/res/layout/login_activity.xml
@@ -220,8 +220,8 @@
         android:id="@+id/botonAccederLogin"
         android:layout_width="100dp"
         android:layout_height="40dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginBottom="80dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginBottom="64dp"
         android:background="@drawable/botones"
         android:fontFamily="@font/roboto"
         android:onClick="botonLoginLanding"
@@ -276,5 +276,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/cleanairlylogo" />
+
+    <CheckBox
+        android:id="@+id/checkBoxPrivacidad"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:clickable="true"
+        android:text="Acepto la Política de privacidad"
+        app:layout_constraintBottom_toTopOf="@+id/botonAccederLogin"
+        app:layout_constraintEnd_toEndOf="@+id/confirmarContrasenyaUsuarioLogin"
+        app:layout_constraintTop_toTopOf="@+id/txtErrorConfContrasenyaLogin" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
